@@ -17,6 +17,11 @@
     <viewlet name="plone.contentviews" />
     <viewlet name="plone.contentactions" />
   </order>
+  <order manager="plone.belowcontentbody" skinname="Plone Default">
+    <viewlet name="plone.belowcontentbody.relateditems" />
+    <viewlet name="plone.belowcontentbody.contenthistory" />
+    <viewlet name="plone.abovecontenttitle.documentactions" />    
+  </order>
   <order manager="plone.belowcontent" skinname="Plone Default">
     <viewlet name="plone.nextprevious" />
     <viewlet name="plone.manage_portlets_fallback" />
